--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="src/html/Contact.php">Contact</a>
+                    <a class="nav-link" href="src/html/Contact.html">Contact</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link get-started-btn " href="src/html/charaterdesign.html" >Get Started</a>
